@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-10T16:12:37Z",
+  "timestamp" : "2022-10-11T00:40:53Z",
   "count_outdated" : 1836,
   "uniques_outdated" : 571,
-  "count" : 1856,
+  "count" : 1857,
   "uniques" : 583,
   "clones" : [
     {
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-10-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
