@@ -1,3 +1,11 @@
+2022-10-11T00:40:53Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3223302421
+* notice: last 14d: unq all: 4 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 571 1836 / 583 1856
+* notice: next accum: outdated-unq outdated-all / unq all: 571 1836 / 583 1857
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-10]
+
 2022-10-10T16:12:37Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3220793202
 * notice: last 14d: unq all: 4 20
